--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Movie Roll</string>
-    <string name="admob_app_id">ca-app-pub-7734869303936340~7490116362</string>
-    <string name="ad_unit_id_native_movies_recycler_view_item">ca-app-pub-7734869303936340/5067967155</string>
-    <string name="ad_unit_id_banner_recycler_view_item">ca-app-pub-7734869303936340/8709976497</string>
-    <string name="ad_unit_id_full_screen">ca-app-pub-7734869303936340/8078942176</string>
+    <string name="admob_app_id">YOUR_ADMOB_APP_ID_HERE</string>
+    <string name="ad_unit_id_native_movies_recycler_view_item">NATIVE_AD_ID_HERE</string>
+    <string name="ad_unit_id_banner">BANNER_AD_ID_HERE</string>
+    <string name="ad_unit_id_full_screen">INTERSTITIAL_AD_ID_HERE</string>
 </resources>
