--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Movie Roll</string>
+
+    <!--for ads-->
+    <string name="admob_app_id">ca-app-pub-7734869303936340~7490116362</string>
+    <string name="ad_unit_id_native_movies_recycler_view_item">ca-app-pub-7734869303936340/5067967155</string>
+    <string name="ad_unit_id_banner">ca-app-pub-7734869303936340/8879197574</string>
+    <string name="ad_unit_id_full_screen">ca-app-pub-7734869303936340/8078942176</string>
+
     <!--for progress dialogs-->
     <string name="fetching_movies">Films ophalen…</string>
     <string name="fetching_movie_cast_details">Het ophalen van film cast details…</string>
@@ -35,4 +43,12 @@
     <string name="view_app_on_playstore">Klik op de app om het te bekijken in de Google Play Store</string>
 
     <string name="internet_error">Gelieve verbinding te maken met internet en probeer het opnieuw</string>
+
+    <string name="please_refresh">Gelieve te vernieuwen</string>
+    <string name="facebook">facebook</string>
+    <string name="linkedin">linkedin</string>
+    <string name="github">github</string>
+    <string name="gmail">gmail</string>
+    <string name="quora">quora</string>
+
 </resources>
