Search feature added, null checks added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="gmail">gmail</string>
     <string name="quora">quora</string>
 
+    <string name="search">Search</string>
+
 </resources>
