--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -51,4 +51,6 @@
     <string name="gmail">gmail</string>
     <string name="quora">quora</string>
 
+    <string name="search">بحث</string>
+
 </resources>
