--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -51,4 +51,5 @@
     <string name="gmail">gmail</string>
     <string name="quora">quora</string>
 
+    <string name="search">Zoeken</string>
 </resources>
