Added translations for search Toast

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -52,5 +52,6 @@
     <string name="quora">quora</string>
 
     <string name="search">Vyhledávání</string>
+    <string name="searching_for">Hledám </string>
 
 </resources>
