--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -52,4 +52,5 @@
     <string name="quora">quora</string>
 
     <string name="search">Zoeken</string>
+    <string name="searching_for">Op zoek naar </string>
 </resources>
