--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="quora">quora</string>
 
     <string name="search">Search</string>
+    <string name="searching_for">Searching for </string>
 
 </resources>
