--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -52,5 +52,7 @@
     <string name="quora">quora</string>
 
     <string name="search">بحث</string>
+    <string name="searching_for">البحث عن </string>
+
 
 </resources>
