--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -52,4 +52,5 @@
     <string name="quora">quora</string>
 
     <string name="search">Rechercher</string>
+    <string name="searching_for">Recherche pour </string>
 </resources>
